--- a/index_list.html
+++ b/index_list.html
@@ -245,8 +245,9 @@
                         <td>AP功能：空間管理</td>
                         <td>
                             <ul>
-                                <li>1.場地清單 <a href="space_list.htm" target="_blank"></a></li>
-                                <li>2.新增/編修場地 <a href="data_spaceedit.htm" target="_blank"></a></li>
+                                <li>1-1.場地清單 <a href="space_list.htm" target="_blank"></a></li>
+                                <li>1-2.新增/編修場地 <a href="data_spaceedit.htm" target="_blank"></a></li>
+                                <li>1-3.租用狀態/租借費用管理 <a href="#" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
@@ -255,8 +256,18 @@
                         <td>AP功能：預約管理</td>
                         <td>
                             <ul>
-                                <li>1.預約清單 <a href="ilosh_reservationList.htm" target="_blank"></a></li>
-                                <!--li>2.預約管理 <a href="#" target="_blank"></a></li-->
+                                <li>2-1.預約清單 <a href="reservationList.htm" target="_blank"></a></li>
+                                <li>2-2.預約聯繫與管理 <a href="#" target="_blank"></a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>AP功能：聯絡我們管理</td>
+                        <td>
+                            <ul>
+                                <li>3-1.聯絡紀錄 <a href="#" target="_blank"></a></li>
+                                <li>3-2.回覆與管理 <a href="#" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
@@ -280,8 +291,8 @@
                         <td>AP功能：空間管理</td>
                         <td>
                             <ul>
-                                <li>1.場地清單 <a href="ilosh_space_list.htm" target="_blank"></a></li>
-                                <li>2.新增/編修場地 <a href="ilosh_data_spaceedit.htm" target="_blank"></a></li>
+                                <li>1-1.場地清單 <a href="ilosh_space_list.htm" target="_blank"></a></li>
+                                <li>1-2.新增/編修場地 <a href="ilosh_data_spaceedit.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
@@ -290,8 +301,31 @@
                         <td>AP功能：預約管理</td>
                         <td>
                             <ul>
-                                <li>1.預約清單 <a href="ilosh_reservationList.htm" target="_blank"></a></li>
-                                <!--li>2.預約管理 <a href="#" target="_blank"></a></li-->
+                                <li>2-1.預約清單 <a href="ilosh_reservationList.htm" target="_blank"></a></li>
+                                <li>2-2.預約管理 <a href="#" target="_blank"></a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>系統功能擴充</td>
+                        <td>
+                            <ul>
+                                <li>3-1.網站/首頁清單 <a href="#" target="_blank"></a></li>
+                                <li>3-2.網站管理 <a href="#" target="_blank"></a></li>
+                                <li>3-3.首頁區塊管理 <a href="#" target="_blank"></a></li>
+                                <li>4.帳號管理 <a href="#" target="_blank"></a>
+                                    <ol>
+                                        <li>新增、檢視、編輯、刪除、以及權限角色變更</li>
+                                        <li>自動管理單位及使用者帳號狀態</li>
+                                        <li>管理者手動管理功能</li>
+                                        <li>提供相關異動紀錄查詢</li>
+                                        <li>使用者匯出</li>
+                                        <li>管理者異動紀錄查詢</li>
+                                        <li>狀態紀錄查詢</li>
+                                        <li>使用者帳號清查</li>
+                                    </ol>
+                                </li>
                             </ul>
                         </td>
                     </tr>
