--- a/reservationList.htm
+++ b/reservationList.htm
@@ -389,7 +389,7 @@
     <script>
     // first example
     $('header').load("header.htm");
-    $('aside').load("aside.htm");
+    $('aside').load("aside_ticc.htm");
     </script>
 </body>
 
