--- a/index_list.html
+++ b/index_list.html
@@ -247,7 +247,8 @@
                             <ul>
                                 <li>1-1.場地清單 <a href="space_list.htm" target="_blank"></a></li>
                                 <li>(更新關聯設定)1-2.新增/編修場地 <a href="data_spaceedit.htm" target="_blank"></a></li>
-                                <li>1-3.租用狀態/租借費用管理 <a href="#" target="_blank"></a></li>
+                                <li>1-3.租用狀態/費用管理 <a href="#" target="_blank"></a></li>
+                                <li>1-4.設備管理 <a href="#" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
