--- a/space_list.htm
+++ b/space_list.htm
@@ -171,10 +171,10 @@
                                                 <div class="dropdown-content">
                                                     <ul>
                                                         <li>
-                                                            <button class="btn"><i class="i_setting"></i>資料設定 </button>
+                                                            <button class="btn" onclick="window.location.href='data_spaceedit.htm';"><i class="i_setting"></i>資料設定 </button>
                                                         </li>
                                                         <li>
-                                                            <button class="btn btn-delete"><i class="i_trash"></i>停用 </button>
+                                                            <button class="btn btn-delete" onclick="confirmFunction()"><i class="i_trash"></i>停用 </button>
                                                         </li>
                                                 </ul>
                                                 </div>
@@ -187,7 +187,7 @@
                                                 </div>
                                             </div>
                                             <div class="card_info">
-                                                <h4 class="card_title">101 全室</h4>
+                                                <h4 class="card_title">101 全室(連結示範)</h4>
                                                 <p>會議室101可針對不同性質會議需求作彈性隔間，可全室打通或隔成四間（101A、101B、101C、101D）、或隔成二間（101AB、101CD），分別容納88－744人不等。本會議室最大特色為設有階梯式電動彈射椅，當使用全間或二間之會議室時，後半段的彈射椅(計:220席*2側=400席)可彈出使用。101會議室共有10間同步口譯室供租用</p>
                                                 <ul>
                                                     <li><span>設備：</span>
@@ -1059,9 +1059,23 @@
     <!-- highlight -->
     <script src="vendor/highlight/highlight.pack.js"></script>
     <script>
-    $('header').load("header.htm");
-    $('aside').load("aside_ticc.htm");
+        $('header').load("header.htm");
+        $('aside').load("aside_ticc.htm");
     </script>
+    <script>
+        function alertFunction() {
+            alert("單純alert訊息");
+        }
+        function confirmFunction() {
+            if (confirm("停用資料將立即從前台下線。確認停用此筆資料？\n點選確定確認停用") == true) {
+                alert("資料已停用");
+            }
+            else {
+                alert("放棄作業");
+            }
+        }
+    </script>
+    
 </body>
 
 </html>
