--- a/fancybox_filelist.htm
+++ b/fancybox_filelist.htm
@@ -71,21 +71,11 @@
                                     <tr>
                                         <th><input type="checkbox"></th>
                                         <th>編號</th>
-                                        <th>
-                                            <a href="#">資料標題</a>
-                                        </th>
-                                        <th>
-                                            <a href="#">分類</a>
-                                        </th>
-                                        <th>
-                                            <a href="#">單位</a>
-                                        </th>
-                                        <th class="text-left">
-                                            <a href="#">狀態</a>
-                                        </th>
-                                        <th>
-                                            <a href="#">更新日期</a>
-                                        </th>
+                                        <th>資料標題</th>
+                                        <th>分類</th>
+                                        <th>單位</th>
+                                        <th>狀態</th>
+                                        <th>更新日期</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -119,63 +109,63 @@
                                     <tr>
                                         <td><input type="checkbox"></td>
                                         <td class="num">4</td>
-                                        <td><a href="#">USER2</a></td>
-                                        <td>使用者</td>
-                                        <td>資訊處</td>
+                                        <td>資料標題顯示資料標題</td>
+                                        <td>資料大類</td>
+                                        <td>上稿單位</td>
                                         <td><span class="green">啟用</span></td>
                                         <td><time>2019/10/16</time></td>
                                     </tr>
                                     <tr>
                                         <td><input type="checkbox"></td>
                                         <td class="num">5</td>
-                                        <td><a href="#">USER3</a></td>
-                                        <td>使用者</td>
-                                        <td>資訊處</td>
+                                        <td>資料標題顯示資料標題</td>
+                                        <td>資料大類</td>
+                                        <td>上稿單位</td>
                                         <td><span class="green">啟用</span></td>
                                         <td><time>2019/10/16</time></td>
                                     </tr>
                                     <tr>
                                         <td><input type="checkbox"></td>
                                         <td class="num">6</td>
-                                        <td><a href="#">USER4</a></td>
-                                        <td>使用者</td>
-                                        <td>資訊處</td>
+                                        <td>資料標題顯示資料標題</td>
+                                        <td>資料大類</td>
+                                        <td>上稿單位</td>
                                         <td><span class="green">啟用</span></td>
                                         <td><time>2019/10/16</time></td>
                                     </tr>
                                     <tr>
                                         <td><input type="checkbox"></td>
                                         <td class="num">7</td>
-                                        <td><a href="#">USER5</a></td>
-                                        <td>使用者</td>
-                                        <td>資訊處</td>
+                                        <td>資料標題顯示資料標題</td>
+                                        <td>資料大類</td>
+                                        <td>上稿單位</td>
                                         <td><span class="green">啟用</span></td>
                                         <td><time>2019/10/16</time></td>
                                     </tr>
                                     <tr>
                                         <td><input type="checkbox"></td>
                                         <td class="num">8</td>
-                                        <td><a href="#">USER6</a></td>
-                                        <td>使用者使用者使用者使用者使用者使用者</td>
-                                        <td>資訊處</td>
+                                        <td>資料標題顯示資料標題</td>
+                                        <td>資料大類</td>
+                                        <td>上稿單位</td>
                                         <td><span class="green">啟用</span></td>
                                         <td><time>2019/10/16</time></td>
                                     </tr>
                                     <tr>
                                         <td><input type="checkbox"></td>
                                         <td class="num">9</td>
-                                        <td><a href="#">USER7</a></td>
-                                        <td>使用者</td>
-                                        <td>資訊處</td>
+                                        <td>資料標題顯示資料標題</td>
+                                        <td>資料大類</td>
+                                        <td>上稿單位</td>
                                         <td><span class="green">啟用</span></td>
                                         <td><time>2019/10/16</time></td>
                                     </tr>
                                     <tr>
                                         <td><input type="checkbox"></td>
                                         <td class="num">10</td>
-                                        <td><a href="#">USER8</a></td>
-                                        <td>使用者</td>
-                                        <td>資訊處</td>
+                                        <td>資料標題顯示資料標題</td>
+                                        <td>資料大類</td>
+                                        <td>上稿單位</td>
                                         <td><span class="green">啟用</span></td>
                                         <td><time>2019/10/16</time></td>
                                     </tr>
