--- a/index_list.html
+++ b/index_list.html
@@ -204,7 +204,7 @@
                                     <font style="color:red;">*4/28: (1)修正處理 Animated Labels for date/datetime-local 會卡在一起的效果；(2)圖檔/檔案上傳區塊的註解文字，需同時更新 fileUpload.css</font></li>
                                 <li>檔案上傳中遮罩 <a href="data_new_uploading.htm" target="_blank"></a></li>
                             </ul>
-                            <p>測試更新TinyMCE版本：https://www.tiny.cloud/docs-4x/quick-start/</p>
+                            <p>測試更新TinyMCE版本：<a href="https://www.tiny.cloud/docs-4x/quick-start/"></a></p>
                             <ul>
                                 <li>Html editor測試(1) <a href="data_new_htmleditor.htm" target="_blank"></a></li>
                                 <li>Html editor測試(2) <a href="data_new_htmleditorv4.htm" target="_blank"></a></li>
@@ -246,7 +246,7 @@
                         <td>
                             <ul>
                                 <li>1-1.場地清單 <a href="space_list.htm" target="_blank"></a></li>
-                                <li>(更新關聯設定)1-2.新增/編修場地 <a href="data_spaceedit.htm" target="_blank"></a></li>
+                                <li><font style="color:red;">(更新關聯設定)</font>1-2.新增/編修場地 <a href="data_spaceedit.htm" target="_blank"></a></li>
                                 <li>1-3.租用狀態/費用管理 <a href="#" target="_blank"></a></li>
                                 <li>1-4.設備管理 <a href="#" target="_blank"></a></li>
                             </ul>
